samples/_failures_safe/1761641283_669da4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24e3a18a.c: In function ‘main’:
./samples/SAFE/__tmp_24e3a18a.c:171:9: error: expected identifier or ‘(’ at end of input
  171 |         size_t
      |         ^~~~~~
./samples/SAFE/__tmp_24e3a18a.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24e3a18a.c:171:9: error: expected declaration or statement at end of input
